# pixdr

./: .gitignore  .gitmodules  README.md  rust-toolchain.toml
.github/workflows/: android-apk.yml
app/: AndroidManifest.xml  Cargo.toml  build.rs
app/assets/: README.md
app/java/org/pixdr/app/: PixdrActivity.kt
app/res/xml/: device_filter.xml
app/src/: android_uhd_context.rs  file_picker.rs  futuresdr_backend.rs  gsm.rs  jni_bridge.rs  lib.rs  uhd_android_context.cc  uhd_wrapper.rs  usb.rs
docs/: android-uhd-injection.md  building.md
patches/boost-android/: 0001-pixdr-make-Android-Boost-build-non-interactive.patch
patches/libusb/: 0001-pixdr-support-android-wrapped-usbfs-fd-diagnostics.patch
patches/uhd/: 0001-pixdr-add-Android-USB-fd-support-for-B200.patch  0001-pixdr-add-Android-context-and-native-usbfs-transport.patch  0001-pixdr-add-android-usb-fd-support-for-b200.patch  0002-pixdr-inject-Android-USB-context-via-weak-provider.patch
patches/uhd-rs/: 0001-pixdr-support-android-uhd-cross-build.patch
scripts/: build-apk.sh  build-native.sh  build-rust.sh  env.sh  export-patches.sh  fetch-uhd-images.sh  install-run.sh  logcat.sh  package-apk.sh  prepare-forks.sh  rebuild-all.sh
