[package]
name = "pixdr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# android-activity 0.6 requires jni 0.21 — use matching version
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.15"
log = "0.4"
jni = { version = "0.22", features = ["invocation"] }
uhd = { path = "../external/uhd-rs/uhd" }
anyhow = "1"
num-complex = "0.4"
rustfft = "6"
cxx = "1"

[build-dependencies]
cxx-build = "1"

[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.34"
default-features = false
features = ["wgpu", "android-native-activity", "default_fonts"]

[target.'cfg(target_os = "android")'.dependencies.wgpu]
version = "29"
default-features = false
features = ["gles"]

[target.'cfg(target_os = "android")'.dependencies.egui-winit]
version = "0.34"
default-features = false
features = ["clipboard", "links"]
